better person management

--- a/LittleFamilyApp/src/main/res/layout/fragment_person_details.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_person_details.xml
@@ -98,7 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="@string/birthDate"
+                    android:text="@string/birthYear"
                     android:id="@+id/lblBirthDate"
                     android:padding="3dip" />
 
