more person management changes

--- a/LittleFamilyApp/src/main/res/layout/fragment_person_details.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_person_details.xml
@@ -1,12 +1,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.yellowforktech.littlefamilytree.activities.PersonDetailsDialog">
+    tools:context="com.yellowforktech.littlefamilytree.activities.PersonDetailsDialog"
+    android:padding="10dp">
 
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:id="@+id/portraitImage"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -264,10 +265,11 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/scrollView"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:id="@+id/linearLayout3">
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -281,5 +283,14 @@
             android:id="@+id/btnAttach"
             android:src="@android:drawable/ic_menu_camera" />
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/close"
+        android:id="@+id/btnClose"
+        android:layout_below="@+id/linearLayout3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
