--- a/LittleFamilyApp/src/main/res/values/strings_activity_pgvlogin.xml
+++ b/LittleFamilyApp/src/main/res/values/strings_activity_pgvlogin.xml
@@ -3,8 +3,8 @@
     <string name="title_activity_pgvlogin">Sign in to PhpGedView</string>
     <!-- Strings related to login -->
     <string name="pgv_url_hint">PhpGedView website URL</string>
-    <string name="pgv_agreements_text">By clicking the \"SIGN IN\" button, I agree to LittleFamily knowing my basic profile information and accessing data about my ancestors from the specified PhpGedView website.</string>
-    <string name="pgv_agreements_text2">LittleFamily will use this information in accordance with their respective terms of service and privacy policies.</string>
-    <string name="pgv_privacy_text">LittleFamily will not distribute or share any information outside of your device except with the specified PhpGedView website.</string>
+    <string name="pgv_agreements_text">By clicking the \"SIGN IN\" button, I agree to Little Family Tree knowing my basic profile information and accessing data about my ancestors from the specified PhpGedView website.</string>
+    <string name="pgv_agreements_text2">Little Family Tree will use this information in accordance with their respective terms of service and privacy policies.</string>
+    <string name="pgv_privacy_text">Little Family Tree will not distribute or share any information outside of your device except with the specified PhpGedView website.</string>
     <string name="default_id_hint">Default person ID (e.g. I1)</string>
 </resources>
