--- a/LittleFamilyApp/src/main/res/values/strings_activity_settings.xml
+++ b/LittleFamilyApp/src/main/res/values/strings_activity_settings.xml
@@ -87,4 +87,5 @@
     <string name="pref_title_tts_voice">Voice</string>
     <string name="pref_title_tts_voice_test">Hear Voice</string>
     <string name="pref_summary_tts_voice_test">Listen to the selected voice speak some sample text.</string>
+    <string name="pref_title_version">Version</string>
 </resources>
