--- a/LittleFamilyApp/src/main/res/xml/pref_general.xml
+++ b/LittleFamilyApp/src/main/res/xml/pref_general.xml
@@ -43,4 +43,7 @@
     <Preference android:title="@string/title_activity_parents_guide" android:key="parents_guide">
     </Preference>
 
+    <Preference android:title="@string/pref_title_version" android:key="version">
+    </Preference>
+
 </PreferenceScreen>
