--- a/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
@@ -22,10 +22,36 @@
         android:layout_weight="1"
          />
 
-    <view
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        class="com.yellowforktech.littlefamilytree.views.WaterColorImageView"
-        android:id="@+id/colorPicker" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="120dp">
+        <view
+            class="com.yellowforktech.littlefamilytree.views.WaterColorImageView"
+            android:id="@+id/colorPicker"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:layout_weight="0">
+            <ImageButton
+                android:id="@+id/nextBtn"
+                android:src="@android:drawable/ic_media_next"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:onClick="nextImage" />
+
+            <ImageButton
+                android:id="@+id/shareBtn"
+                android:src="@android:drawable/ic_menu_camera"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:onClick="shareImage"
+                android:visibility="invisible"/>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
