share coloring image

--- a/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
@@ -50,7 +50,7 @@
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:onClick="shareImage"
-                android:visibility="invisible"/>
+                android:visibility="visible"/>
         </LinearLayout>
     </LinearLayout>
 
