Finish England clothing placement, Fix selection of new dress-up clothes

--- a/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
@@ -22,16 +22,19 @@
         android:layout_below="@+id/topBarFragment"
         android:layout_centerHorizontal="true" />
 
-        <GridView
-            android:layout_width="match_parent"
+    <HorizontalScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/horizontalScrollView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" >
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
             android:layout_height="140dp"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/dollGrid"
-            android:visibility="invisible"
-            android:horizontalSpacing="10dp"
-            android:numColumns="5"
-            android:columnWidth="140dp"
-            android:scrollbars="horizontal"
-            android:clickable="false" />
+            android:id="@+id/dollLayout"
+            ></LinearLayout>
+    </HorizontalScrollView>
 
 </RelativeLayout>
