--- a/LittleFamilyApp/src/main/res/layout/activity_splash.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_splash.xml
@@ -5,8 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.yellowforktech.littlefamilytree.activities.SplashActivity"
-    android:columnCount="1"
-    android:rowCount="2"
+    android:columnCount="2"
+    android:rowCount="16"
     android:background="#ffffffff">
 
 
@@ -29,6 +29,14 @@
         android:layout_row="1"
         android:layout_column="0" />
 
+    <ImageView
+        android:layout_width="105dp"
+        android:layout_height="70dp"
+        android:id="@+id/yftLogo"
+        android:layout_row="15"
+        android:layout_column="0"
+        android:src="@drawable/yft_logo"
+        android:layout_gravity="right"/>
 
 
 </GridLayout>
