--- a/LittleFamilyApp/src/main/res/layout/activity_song.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_song.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.yellowforktech.littlefamilytree.activities.SongActivity"
-    android:background="@drawable/puzzle_background">
+    android:background="@drawable/puzzle_background"
+                android:orientation="vertical" >
 
     <FrameLayout
         tools:layout="@layout/fragment_top_bar"
