--- a/LittleFamilyApp/src/main/res/layout/activity_flying.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_flying.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.yellowforktech.littlefamilytree.activities.FlyingActivity">
+    tools:context="com.yellowforktech.littlefamilytree.activities.FlyingActivity"
+    android:background="@drawable/tree_background">
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -14,7 +15,7 @@
         android:layout_centerHorizontal="true"
         tools:layout="@layout/fragment_top_bar" />
 
-    <com.yellowforktech.littlefamilytree.views.RotateSensorSpritedSurfaceView
+    <com.yellowforktech.littlefamilytree.views.FlyingSurfaceView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/flyingView"
