--- a/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_heritage_dress_up.xml
@@ -3,7 +3,7 @@
     android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingBottom="0dp"
     tools:context="com.yellowforktech.littlefamilytree.activities.HeritageDressUpActivity"
     android:background="@drawable/dressup_background">
 
@@ -24,15 +24,16 @@
 
     <HorizontalScrollView
         android:layout_width="fill_parent"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
         android:id="@+id/horizontalScrollView"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" >
+        android:layout_centerHorizontal="true"
+        >
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:id="@+id/dollLayout"
             ></LinearLayout>
     </HorizontalScrollView>
