--- a/website/littlefamily.css
+++ b/website/littlefamily.css
@@ -5,7 +5,7 @@
 }
 section {
     margin-top: 50px;
-    min-height: 500px;
+    min-height: 400px;
 }
 .navbar-toggle {
     float: left;
@@ -222,6 +222,10 @@ section {
     line-height: 40px;
 }
 
+.small-show {
+        display: none;
+    }
+
 @media(min-width:768px) {
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
         font-size: 16px;
@@ -236,5 +240,8 @@ section {
     .contact-section {
         text-align: center;
         margin-bottom: 50px;
+    }
+    .small-show {
+        display: block;
     }
 }
