adapting for larger screens

--- a/website/littlefamily.css
+++ b/website/littlefamily.css
@@ -226,6 +226,10 @@ section {
         display: none;
     }
 
+.game-video {
+    margin-bottom: 20px;
+}
+
 @media(min-width:768px) {
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
         font-size: 16px;
