--- a/LittleFamilyApp/src/main/res/layout/activity_choose_family_member.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_family_member.xml
@@ -13,18 +13,33 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <TextView
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/title_activity_choose_family_member"
-            android:id="@+id/textView"
-            style="@style/FullscreenActionBarStyle"
-            android:textAlignment="center"
-            android:layout_marginBottom="5dp"
-            android:textColor="@android:color/primary_text_light"
-            android:paddingLeft="10dp"
-            android:paddingTop="5dp" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="39dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/title_activity_choose_family_member"
+                android:id="@+id/textView"
+                style="@style/FullscreenActionBarStyle"
+                android:textAlignment="center"
+                android:layout_marginBottom="5dp"
+                android:textColor="@android:color/primary_text_light"
+                android:paddingLeft="10dp"
+                android:paddingTop="5dp"
+                android:layout_weight="1"/>
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/action_sign_in_short"
+                android:id="@+id/LoginButton"
+                android:onClick="onLoginButtonClicked"/>
+        </LinearLayout>
 
         <GridView
             android:layout_width="wrap_content"
