--- a/LittleFamilyApp/src/main/res/layout/activity_choose_family_member.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_family_member.xml
@@ -16,7 +16,8 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            style="@style/FullscreenActionBarStyle">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -24,7 +25,6 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/title_activity_choose_family_member"
                 android:id="@+id/textView"
-                style="@style/FullscreenActionBarStyle"
                 android:textAlignment="center"
                 android:layout_marginBottom="5dp"
                 android:textColor="@android:color/primary_text_light"
