Show relationships from manage people settings

--- a/LittleFamilyApp/src/main/res/layout/fragment_person_details.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_person_details.xml
@@ -130,6 +130,29 @@
 
                 <TableRow
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="@string/relationship"
+                        android:id="@+id/lblRelationship"
+                        android:padding="3dip"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Small Text"
+                        android:id="@+id/txtRelationship"
+                        android:padding="3dip"
+                        />
+                </TableRow>
+
+                <TableRow
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent" >
 
                     <TextView
