--- a/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
@@ -32,6 +32,17 @@
             android:layout_height="fill_parent"
             android:layout_weight="1" />
 
+        <view
+            class="com.yellowforktech.littlefamilytree.views.BrushSizeView"
+            android:layout_width="50dp"
+            android:layout_height="fill_parent"
+            android:id="@+id/brushSize" />
+        <view
+            class="com.yellowforktech.littlefamilytree.views.VerticalSeekBar"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:id="@+id/seekBar" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
