--- a/LittleFamilyApp/src/main/res/layout/activity_choose_culture.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_culture.xml
@@ -44,36 +44,24 @@
         android:baselineAligned="false"
         android:layout_marginTop="20dp">
 
+        <com.yellowforktech.littlefamilytree.views.PagerContainer
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/personPagerContainer"
+            android:layout_weight="2"
+            >
+            <android.support.v4.view.ViewPager
+                android:layout_width="150dp"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center_horizontal" />
+        </com.yellowforktech.littlefamilytree.views.PagerContainer>
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_gravity="center"
-            android:layout_weight="1"
-            android:padding="5dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Person"
-                android:id="@+id/personNameTextView"
-                android:layout_gravity="center_horizontal" />
-
-            <ImageView
-                android:id="@+id/portraitImage"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="top|center_horizontal"
-                android:onClick="startDressUpActivity" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1"
+            android:layout_weight="3"
             android:padding="5dp">
 
             <TextView
