--- a/LittleFamilyApp/src/main/res/layout/activity_choose_culture.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_choose_culture.xml
@@ -11,7 +11,7 @@
     android:background="@drawable/dressup_background">
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/topbar_height"
         android:id="@+id/topBarFragment"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
