--- a/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_coloring_game.xml
@@ -10,7 +10,7 @@
 
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/topbar_height"
         android:id="@+id/topBarFragment"
         tools:layout="@layout/fragment_top_bar" />
 
@@ -24,28 +24,31 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="120dp">
+        android:layout_height="wrap_content"
+        android:layout_weight="4">
         <view
             class="com.yellowforktech.littlefamilytree.views.WaterColorImageView"
             android:id="@+id/colorPicker"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:layout_weight="1" />
+            android:layout_weight="2" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:orientation="vertical"
-            android:layout_weight="0">
+            android:layout_weight="5">
             <view
                 class="com.yellowforktech.littlefamilytree.views.BrushSizeView"
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:id="@+id/brushSize" />
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/brushSize"
+                android:layout_weight="1"/>
             <SeekBar
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/seekBar" />
+                android:id="@+id/seekBar"
+                android:layout_weight="1" />
         </LinearLayout>
 
         <LinearLayout
@@ -56,19 +59,21 @@
             <ImageButton
                 android:id="@+id/nextBtn"
                 android:src="@android:drawable/ic_media_next"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:onClick="nextImage"
-                style="@android:style/Widget.Holo.Button" />
+                style="@android:style/Widget.Holo.Button"
+                android:layout_weight="1"/>
 
             <ImageButton
                 android:id="@+id/shareBtn"
                 android:src="@android:drawable/ic_menu_camera"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:onClick="shareImage"
                 android:visibility="visible"
-                style="@android:style/Widget.Holo.Button" />
+                style="@android:style/Widget.Holo.Button"
+                android:layout_weight="1" />
         </LinearLayout>
     </LinearLayout>
 
