--- a/LittleFamilyApp/src/main/res/layout/activity_match_game.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_match_game.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/topbar_height"
         android:id="@+id/topBarFragment"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
