--- a/LittleFamilyApp/src/main/res/values/dimens.xml
+++ b/LittleFamilyApp/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">12dp</dimen>
     <dimen name="activity_vertical_margin">12dp</dimen>
+    <dimen name="topbar_height">40dp</dimen>
 </resources>
