--- a/LittleFamilyApp/src/main/res/layout/activity_parents_guide.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_parents_guide.xml
@@ -216,7 +216,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageView8"
-                android:src="@android:drawable/ic_menu_manage" />
+                android:src="@drawable/settings" />
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
