--- a/LittleFamilyApp/src/main/res/layout/fragment_top_bar.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_top_bar.xml
@@ -32,6 +32,6 @@
         android:id="@+id/settingsBtn"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:src="@android:drawable/ic_menu_manage"
+        android:src="@drawable/settings"
         android:onClick="onSettingsButtonPressed" />
 </RelativeLayout>
