--- a/LittleFamilyApp/src/main/res/layout/activity_splash.xml
+++ b/LittleFamilyApp/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.yellowforktech.littlefamilytree.activities.SplashActivity"
-    android:columnCount="1"
+    android:columnCount="2"
     android:rowCount="16"
     android:background="#ffffffff">
 
@@ -17,6 +17,7 @@
         android:id="@+id/plantView"
         android:layout_row="0"
         android:layout_column="0"
+        android:layout_columnSpan="2"
         android:layout_gravity="center" />
 
     <ImageView
@@ -27,14 +28,25 @@
             android:layout_gravity="top|center_horizontal"
             android:layout_rowWeight="2"
         android:layout_row="1"
-        android:layout_column="0" />
+        android:layout_column="0"
+        android:layout_columnSpan="2"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:id="@+id/quietMode"
+        android:layout_row="15"
+        android:layout_column="0"
+        android:src="@drawable/quiet_mode_off"
+        android:onClick="toggleQuietMode"
+        android:contentDescription="Toggle Quiet Mode" />
 
     <ImageView
         android:layout_width="105dp"
         android:layout_height="70dp"
         android:id="@+id/yftLogo"
         android:layout_row="15"
-        android:layout_column="0"
+        android:layout_column="1"
         android:src="@drawable/yft_logo"
         android:layout_gravity="right"/>
 
