--- a/LittleFamilyApp/src/main/res/layout-land/activity_splash.xml
+++ b/LittleFamilyApp/src/main/res/layout-land/activity_splash.xml
@@ -1,12 +1,11 @@
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.yellowforktech.littlefamilytree.activities.SplashActivity"
-    android:columnCount="3"
-    android:rowCount="2"
+    android:orientation="vertical"
     android:background="#ffffffff">
 
 
@@ -15,40 +14,39 @@
         android:layout_height="150dp"
         class="com.yellowforktech.littlefamilytree.views.SpritedSurfaceView"
         android:id="@+id/plantView"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
         android:layout_gravity="center" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/splash_logo"
-            android:src="@drawable/little_family_logo"
-            android:layout_gravity="top|center_horizontal"
-        android:layout_row="1"
-        android:layout_column="1"
-        />
+
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="70dp"
         android:id="@+id/quietMode"
-        android:layout_row="1"
-        android:layout_column="0"
         android:src="@drawable/quiet_mode_off"
         android:onClick="toggleQuietMode"
         android:contentDescription="Toggle Quiet Mode"
         android:layout_gravity="bottom"/>
 
     <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/splash_logo"
+            android:src="@drawable/little_family_logo"
+            android:layout_gravity="center_horizontal"
+        />
+
+    <ImageView
         android:layout_width="105dp"
         android:layout_height="70dp"
         android:id="@+id/yftLogo"
-        android:layout_row="1"
-        android:layout_column="2"
         android:src="@drawable/yft_logo"
-        android:layout_gravity="bottom|right"/>
+        android:layout_gravity="bottom"/>
 
-
-</GridLayout>
+    </LinearLayout>
+</LinearLayout>
