Finishing new parent's guide Fixing bugs from crash reports

--- a/LittleFamilyApp/src/main/res/layout/fragment_parentsguide.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_parentsguide.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/scratch_background">
+    android:background="@drawable/scratch_background"
+    android:padding="5dp">
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:id="@+id/pgPager">
+        android:id="@+id/pgPager"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
     </android.support.v4.view.ViewPager>
 
@@ -31,4 +36,12 @@
         android:text="OK.  Got It!"
         android:id="@+id/okBtn"
         android:layout_gravity="center_horizontal|bottom" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView16"
+        android:layout_gravity="center_horizontal|top"
+        android:src="@drawable/parentsguide"
+        android:layout_marginTop="10dp" />
 </FrameLayout>
