--- a/LittleFamilyApp/src/main/res/layout/fragment_pg_photos.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_pg_photos.xml
@@ -24,7 +24,8 @@
             android:layout_marginTop="5dp"
             android:scaleType="fitStart"
             android:src="@drawable/guide_full_tree"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:layout_marginRight="5dp" />
 
         <TextView
             android:id="@+id/textView26"
