--- a/LittleFamilyApp/src/main/res/layout/fragment_pg_playtogether.xml
+++ b/LittleFamilyApp/src/main/res/layout/fragment_pg_playtogether.xml
@@ -23,7 +23,8 @@
             android:layout_marginTop="5dp"
             android:text="@string/guide_engage_children"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:layout_weight="2" />
+            android:layout_weight="2"
+            android:layout_marginRight="5dp" />
 
         <ImageView
             android:layout_width="wrap_content"
